--- a/po/es.po
+++ b/po/es.po
@@ -259,6 +259,15 @@ msgstr "Velocidad de Sampleo:"
 msgid "Delay (msec):"
 msgstr "Retardo (msec):"
 
+msgid "48k"
+msgstr ""
+
+msgid "44.1k"
+msgstr ""
+
+msgid "96k"
+msgstr ""
+
 msgid "Block size:"
 msgstr "Tamaño de Bloque:"
 
@@ -799,6 +808,22 @@ msgstr ""
 msgid "_"
 msgstr ""
 
+#, fuzzy, tcl-format
+msgid ""
+"Do you want Pd to use the existing documents directory for patches and "
+"external libraries?\n"
+"\n"
+"Location: %s\n"
+"\n"
+"You can change or disable this later in the Path preferences."
+msgstr ""
+"¿Desea que Pd genere un directorio para parches y librerias de externos?\n"
+"\n"
+"Ubicacion: %s\n"
+"\n"
+"Puede cambiar o desactivar esta funcion luego desde las configuraciones de "
+"Ruta."
+
 #, tcl-format
 msgid ""
 "Do you want Pd to create a documents directory for patches and external "
@@ -836,6 +861,9 @@ msgstr "no se ha podido crear el directorio de documentos de Pd: %s\n"
 #, fuzzy, tcl-format
 msgid "couldn't create \"externals\" directory in: %s\n"
 msgstr "no se ha podido crear el directorio \"externals\" en: %s\n"
+
+msgid "refusing to delete empty domain"
+msgstr ""
 
 #, fuzzy, tcl-format
 msgid "Couldn't create preferences \"%1$s\" in %2$s"
@@ -988,6 +1016,14 @@ msgid ""
 msgstr ""
 "¿Desea eliminar todas las preferencias?\n"
 "Tomara efecto cuando Pd reinicie."
+
+#, fuzzy
+msgid "removed GUI settings"
+msgstr "Archivo .pdsettings eliminado"
+
+#, fuzzy
+msgid "no Pd-GUI settings to clear"
+msgstr "No hay configuraciones para borrar"
 
 msgid "Path..."
 msgstr "Ruta..."
