--- a/po/eu.po
+++ b/po/eu.po
@@ -284,6 +284,15 @@ msgstr "Samplearen heina:"
 msgid "Delay (msec):"
 msgstr ""
 
+msgid "48k"
+msgstr ""
+
+msgid "44.1k"
+msgstr ""
+
+msgid "96k"
+msgstr ""
+
 msgid "Block size:"
 msgstr ""
 
@@ -842,6 +851,16 @@ msgstr ""
 
 #, tcl-format
 msgid ""
+"Do you want Pd to use the existing documents directory for patches and "
+"external libraries?\n"
+"\n"
+"Location: %s\n"
+"\n"
+"You can change or disable this later in the Path preferences."
+msgstr ""
+
+#, tcl-format
+msgid ""
 "Do you want Pd to create a documents directory for patches and external "
 "libraries?\n"
 "\n"
@@ -865,6 +884,9 @@ msgstr ""
 
 #, tcl-format
 msgid "couldn't create \"externals\" directory in: %s\n"
+msgstr ""
+
+msgid "refusing to delete empty domain"
 msgstr ""
 
 #, tcl-format
@@ -1033,6 +1055,13 @@ msgstr "Menua Garbitu"
 msgid ""
 "Delete all preferences?\n"
 "(takes effect when Pd is restarted)"
+msgstr ""
+
+#, fuzzy
+msgid "removed GUI settings"
+msgstr "Ezarpen gustiak gorde"
+
+msgid "no Pd-GUI settings to clear"
 msgstr ""
 
 msgid "Path..."
