fix helpfile, update po files

--- a/po/fr.po
+++ b/po/fr.po
@@ -812,8 +812,8 @@ msgid ""
 "\n"
 "You can change or disable this later in the Path preferences."
 msgstr ""
-"Voulez-vous que Pd utilise le dossier Documents existant pour les patchs "
-"et les externals ?\n"
+"Voulez-vous que Pd utilise le dossier Documents existant pour les patchs et "
+"les externals ?\n"
 "\n"
 "Emplacement : %s\n"
 "\n"
@@ -907,6 +907,9 @@ msgstr "Défaire"
 msgid "Redo"
 msgstr "Refaire"
 
+msgid "List of objects..."
+msgstr "Liste des objets..."
+
 msgid "New"
 msgstr "Nouveau"
 
@@ -994,9 +997,6 @@ msgstr "Aide HTML..."
 msgid "Browser..."
 msgstr "Navigateur d'aide..."
 
-msgid "List of objects..."
-msgstr "Liste des objets..."
-
 msgid "puredata.info"
 msgstr "puredata.info"
 
@@ -1033,10 +1033,6 @@ msgstr "Paramètres MIDI..."
 
 msgid "Zoom New Windows"
 msgstr "Zoomer les nouvelles fenêtres"
-
-#, fuzzy
-msgid "Bezier Cables"
-msgstr "Courbe de Bézier"
 
 msgid "Save All Preferences"
 msgstr "Enregistrer toutes les préférences"
@@ -1114,6 +1110,10 @@ msgstr "ignorer '%s' : n'existe pas"
 #, tcl-format
 msgid "ignoring '%s': doesn't look like a Pd file"
 msgstr "ignorer '%s' : ne semble pas être un fichier Pd"
+
+#, fuzzy
+#~ msgid "Bezier Cables"
+#~ msgstr "Courbe de Bézier"
 
 #~ msgid "Create"
 #~ msgstr "Créer"
