--- a/po/el.po
+++ b/po/el.po
@@ -914,9 +914,6 @@ msgstr "Αναίρεση"
 msgid "Redo"
 msgstr "Ακύρωση Αναίρεσης"
 
-msgid "List of objects..."
-msgstr ""
-
 msgid "New"
 msgstr "Νέο"
 
@@ -1008,6 +1005,9 @@ msgstr "Εγχειρίδιο HTML..."
 msgid "Browser..."
 msgstr "Πλοήγηση..."
 
+msgid "List of objects..."
+msgstr ""
+
 msgid "puredata.info"
 msgstr ""
 
@@ -1046,6 +1046,10 @@ msgstr "Ρυθμίσεις MIDI..."
 #, fuzzy
 msgid "Zoom New Windows"
 msgstr "Γονεϊκό Παράθυρο"
+
+#, fuzzy
+msgid "Bezier Cables"
+msgstr "Καμπύλη Bezier"
 
 #, fuzzy
 msgid "Save All Preferences"
@@ -1128,10 +1132,6 @@ msgstr ""
 #, tcl-format
 msgid "ignoring '%s': doesn't look like a Pd file"
 msgstr ""
-
-#, fuzzy
-#~ msgid "Bezier Cables"
-#~ msgstr "Καμπύλη Bezier"
 
 #~ msgid "for:"
 #~ msgstr "για:"
