--- a/po/fr.po
+++ b/po/fr.po
@@ -907,9 +907,6 @@ msgstr "Défaire"
 msgid "Redo"
 msgstr "Refaire"
 
-msgid "List of objects..."
-msgstr "Liste des objets..."
-
 msgid "New"
 msgstr "Nouveau"
 
@@ -997,6 +994,9 @@ msgstr "Aide HTML..."
 msgid "Browser..."
 msgstr "Navigateur d'aide..."
 
+msgid "List of objects..."
+msgstr "Liste des objets..."
+
 msgid "puredata.info"
 msgstr "puredata.info"
 
@@ -1033,6 +1033,10 @@ msgstr "Paramètres MIDI..."
 
 msgid "Zoom New Windows"
 msgstr "Zoomer les nouvelles fenêtres"
+
+#, fuzzy
+msgid "Bezier Cables"
+msgstr "Courbe de Bézier"
 
 msgid "Save All Preferences"
 msgstr "Enregistrer toutes les préférences"
@@ -1110,10 +1114,6 @@ msgstr "ignorer '%s' : n'existe pas"
 #, tcl-format
 msgid "ignoring '%s': doesn't look like a Pd file"
 msgstr "ignorer '%s' : ne semble pas être un fichier Pd"
-
-#, fuzzy
-#~ msgid "Bezier Cables"
-#~ msgstr "Courbe de Bézier"
 
 #~ msgid "Create"
 #~ msgstr "Créer"
