--- a/po/it.po
+++ b/po/it.po
@@ -911,9 +911,6 @@ msgstr "Annulla"
 msgid "Redo"
 msgstr "Ripristina"
 
-msgid "List of objects..."
-msgstr ""
-
 msgid "New"
 msgstr "Nuovo File"
 
@@ -1004,6 +1001,9 @@ msgstr "Manuale HTML..."
 msgid "Browser..."
 msgstr ""
 
+msgid "List of objects..."
+msgstr ""
+
 msgid "puredata.info"
 msgstr ""
 
@@ -1042,6 +1042,10 @@ msgstr "Settaggi MIDI..."
 #, fuzzy
 msgid "Zoom New Windows"
 msgstr "Finestra parent"
+
+#, fuzzy
+msgid "Bezier Cables"
+msgstr "Curva bezier"
 
 #, fuzzy
 msgid "Save All Preferences"
@@ -1124,10 +1128,6 @@ msgstr ""
 #, tcl-format
 msgid "ignoring '%s': doesn't look like a Pd file"
 msgstr ""
-
-#, fuzzy
-#~ msgid "Bezier Cables"
-#~ msgstr "Curva bezier"
 
 #~ msgid "for:"
 #~ msgstr "per:"
