--- a/po/pt_pt.po
+++ b/po/pt_pt.po
@@ -909,9 +909,6 @@ msgstr "Anular"
 msgid "Redo"
 msgstr "Restaurar"
 
-msgid "List of objects..."
-msgstr ""
-
 msgid "New"
 msgstr "Novo"
 
@@ -1002,6 +999,9 @@ msgstr "Manual HTML"
 msgid "Browser..."
 msgstr "Navegador"
 
+msgid "List of objects..."
+msgstr ""
+
 msgid "puredata.info"
 msgstr ""
 
@@ -1040,6 +1040,10 @@ msgstr "Configuração MIDI..."
 #, fuzzy
 msgid "Zoom New Windows"
 msgstr "Janela superior"
+
+#, fuzzy
+msgid "Bezier Cables"
+msgstr "Curva de Bézier"
 
 #, fuzzy
 msgid "Save All Preferences"
@@ -1122,10 +1126,6 @@ msgstr ""
 #, tcl-format
 msgid "ignoring '%s': doesn't look like a Pd file"
 msgstr ""
-
-#, fuzzy
-#~ msgid "Bezier Cables"
-#~ msgstr "Curva de Bézier"
 
 #~ msgid "for:"
 #~ msgstr "por:"
