--- a/po/sv.po
+++ b/po/sv.po
@@ -922,9 +922,6 @@ msgstr "Ångra"
 msgid "Redo"
 msgstr "Gör om"
 
-msgid "List of objects..."
-msgstr ""
-
 msgid "New"
 msgstr "Ny"
 
@@ -1018,6 +1015,9 @@ msgstr "HTML-manual..."
 msgid "Browser..."
 msgstr "Bläddra..."
 
+msgid "List of objects..."
+msgstr ""
+
 msgid "puredata.info"
 msgstr ""
 
@@ -1054,6 +1054,10 @@ msgstr ""
 #, fuzzy
 msgid "Zoom New Windows"
 msgstr "Föräldrafönster"
+
+#, fuzzy
+msgid "Bezier Cables"
+msgstr "Bezier-kurva"
 
 #, fuzzy
 msgid "Save All Preferences"
@@ -1136,10 +1140,6 @@ msgstr ""
 #, tcl-format
 msgid "ignoring '%s': doesn't look like a Pd file"
 msgstr ""
-
-#, fuzzy
-#~ msgid "Bezier Cables"
-#~ msgstr "Bezier-kurva"
 
 #~ msgid "for:"
 #~ msgstr "efter:"
