--- a/po/pt_br.po
+++ b/po/pt_br.po
@@ -945,9 +945,6 @@ msgstr "Desfazer"
 msgid "Redo"
 msgstr "Refazer"
 
-msgid "List of objects..."
-msgstr "Lista de objetos..."
-
 msgid "New"
 msgstr "Novo"
 
@@ -1035,6 +1032,9 @@ msgstr "Manual em HTML..."
 msgid "Browser..."
 msgstr "Navegador..."
 
+msgid "List of objects..."
+msgstr "Lista de objetos..."
+
 msgid "puredata.info"
 msgstr "puredata.info"
 
@@ -1073,6 +1073,10 @@ msgstr "Configurações de MIDI..."
 
 msgid "Zoom New Windows"
 msgstr "Amplicar Zoom em Novas Janelas"
+
+#, fuzzy
+msgid "Bezier Cables"
+msgstr "Curva de Bezier"
 
 msgid "Save All Preferences"
 msgstr "Salvar Todas as Preferências"
@@ -1150,10 +1154,6 @@ msgstr "ignorando '%s': não existe"
 #, fuzzy, tcl-format
 msgid "ignoring '%s': doesn't look like a Pd file"
 msgstr "ignorando '%s': não parece ser um arquivo de Pd válido"
-
-#, fuzzy
-#~ msgid "Bezier Cables"
-#~ msgstr "Curva de Bezier"
 
 #~ msgid "Unable to perform search. Are you online?"
 #~ msgstr "Incapaz de realizar busca. Você está online?"
